# manim-ddpm

./: .gitignore  README.md  individual_scenes.py  pyproject.toml  sandbox.ipynb
src/: __init__.py  backward_transition_slide.py  base.py  celebahq_demo_slide.py  chairs_zoom_slide.py  ddpm_innovation_slide.py  density_evolution_slide.py  diffusion_intro_slide.py  final_scene.py  forward_diffusion_slide.py  intuition_slide.py  mathematical_formulation_slide.py  process_overview_slide.py  reverse_denoising_slide.py  three_gaussians_3d.py  three_ideas_intersection_slide.py  title_slide.py  training_process_slide.py
transcript/: a.txt  b.txt  c.txt  d.md  d.txt  e.md  e.txt  f.md  g.md  h.md  i.md
