[project]
name = "ddpm-manim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "manim>=0.19.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ddpm_manim"]

[tool.setuptools.package-dir]
"ddpm_manim" = "src"